--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -693,11 +693,18 @@ padding: 1% 0%;
 margin: 10px 0;
 }
 
+fieldset legend {
+font-weight: bold;
+padding-left: 10px;
+display: block;
+text-transform: uppercase;
+}
+
 fieldset label {
 display: block;
 float: left;
-width: 200px;
-height: 25px;
+width: 100px;
+height: 25px; 
 line-height: 25px;
 text-shadow: 0 1px 0 #fff;
 font-weight: bold;
